--- a/DontSee.html
+++ b/DontSee.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title>Don't See</title>
+    <script src = "main.js"></script>
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 
