--- a/DontSee.html
+++ b/DontSee.html
@@ -1,17 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Don't See</title>
-    <script src = "main.js"></script>
-    <link rel="stylesheet" type="text/css" href="main.css">
-</head>
-<body>
-
-<h1>dont see</h1>
-<p id = "nani"></p>
-
-<h1>Test Don't See</h1>
-<p>Hi there</p>
-
-</body>
-</html>
+version https://git-lfs.github.com/spec/v1
+oid sha256:7e5469da8aee7c1b8dab0316c97d98911ad517c5ac0a47baeaaa05818a51e0fe
+size 411
