--- a/DontSee.html
+++ b/DontSee.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>Don't See</title>
-    <script src = "main.js"></script>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <script src = "Main.js"></script>
+    <link rel="stylesheet" type="text/css" href="Main.css">
     <embed name="ForestSound" src="testforest.mp3" loop="true" hidden="true" autostart="true"><!--https://www.youtube.com/watch?v=baA6mTCn54A-->
 
 </head>
