--- a/DontSee.html
+++ b/DontSee.html
@@ -4,7 +4,9 @@
 <title>Don't See</title>
     <script src = "Main.js"></script>
     <link rel="stylesheet" type="text/css" href="Main.css">
-    <embed name="ForestSound" src="https://www.youtube.com/watch?v=baA6mTCn54A" loop="true" hidden="true" autostart="true"><!--https://www.youtube.com/watch?v=baA6mTCn54A-->
+    <embed name="ForestSound" src="https://www.youtube.com/watch?v=baA6mTCn54A" 
+           loop="true" type = "application/x-shockwave-flash" hidden="true" autostart="true"
+           allowsciptaccess="always" allowfullscreen="false"><!--https://www.youtube.com/watch?v=baA6mTCn54A-->
 
 </head>
 <body>
