--- a/DontSee.html
+++ b/DontSee.html
@@ -11,9 +11,6 @@
 
 <h1>dont see</h1>
 <p id = "nani"></p>
-
-<h1>Test Don't See</h1>
-<p>Hi there</p>
-
+<canvas id="myCanvas"></canvas>
 </body>
 </html>
