--- a/DontSee.html
+++ b/DontSee.html
@@ -13,6 +13,6 @@
 
 <h1>dont see</h1>
 <p id = "nani"></p>
-<canvas id="myCanvas"></canvas>
+<center><canvas id="myCanvas" width = "500" height = "1000"></canvas></center>
 </body>
 </html>
