--- a/DontSee.html
+++ b/DontSee.html
@@ -2,17 +2,17 @@
 <html>
 <head>
 <title>Don't See</title>
-    <script src = "Main.js"></script>
+    <script src = "Main.js" type="application/javascript"></script>
     <link rel="stylesheet" type="text/css" href="Main.css">
     <embed name="ForestSound" src="https://www.youtube.com/watch?v=baA6mTCn54A" 
            loop="true" type = "application/x-shockwave-flash" hidden="true" autostart="true"
            allowsciptaccess="always" allowfullscreen="false"><!--https://www.youtube.com/watch?v=baA6mTCn54A-->
 
 </head>
-<body>
+<body onload="main()">
 
 <h1>dont see</h1>
 <p id = "nani"></p>
-<center><canvas id="myCanvas" width = "500" height = "1000"></canvas></center>
+<canvas id="myCanvas" width = "500" height = "1000" style="border:1px solid #d3d3d3;"></canvas>
 </body>
 </html>
