--- a/DontSee.html
+++ b/DontSee.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <title>Don't See</title>
-    <script src = "Main.js"></script>
+    <script src = "Main.js" type="application/javascript"></script>
     <link rel="stylesheet" type="text/css" href="Main.css">
     <embed name="ForestSound" src="https://www.youtube.com/watch?v=baA6mTCn54A" 
            loop="true" type = "application/x-shockwave-flash" hidden="true" autostart="true"
            allowsciptaccess="always" allowfullscreen="false"><!--https://www.youtube.com/watch?v=baA6mTCn54A-->
 
 </head>
-<body>
+<body onload="main()">
 
 <h1>dont see</h1>
 <p id = "nani"></p>
