--- a/DontSee.html
+++ b/DontSee.html
@@ -3,6 +3,7 @@
 <head>
 <title>Don't See</title>
     <script src = "Main.js" type="application/javascript"></script>
+    <script src = "ANS.js" type="application/javascript"></script>
     <link rel="stylesheet" type="text/css" href="Main.css">
     <embed name="ForestSound" src="https://www.youtube.com/watch?v=baA6mTCn54A" 
            loop="true" type = "application/x-shockwave-flash" hidden="true" autostart="true"
