--- a/DontSee.html
+++ b/DontSee.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Don't See</title>
+<center><h1>Don't see</h1></center>
     <script src = "Main.js" type="application/javascript"></script>
     <script src = "ANS.js" type="application/javascript"></script>
     <link rel="stylesheet" type="text/css" href="Main.css">
@@ -11,8 +12,6 @@
 
 </head>
 <body onload="main()">
-
-<h1>dont see</h1>
 <p id = "nani"></p>
 <canvas id="myCanvas"></canvas>
 </body>
