--- a/DontSee.html
+++ b/DontSee.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Don't See</title>
-<center><h1>Don't see</h1></center>
+    <h1>Don't see</h1>
     <script src = "Main.js" type="application/javascript"></script>
     <script src = "ANS.js" type="application/javascript"></script>
     <link rel="stylesheet" type="text/css" href="Main.css">
