--- a/DontSee.html
+++ b/DontSee.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <title>Don't See</title>
+<h1>Don't see</h1>
     <script src = "Main.js" type="application/javascript"></script>
+    <script src = "ANS.js" type="application/javascript"></script>
     <link rel="stylesheet" type="text/css" href="Main.css">
     <embed name="ForestSound" src="https://www.youtube.com/watch?v=baA6mTCn54A" 
            loop="true" type = "application/x-shockwave-flash" hidden="true" autostart="true"
@@ -10,9 +12,7 @@
 
 </head>
 <body onload="main()">
-
-<h1>dont see</h1>
 <p id = "nani"></p>
-<canvas id="myCanvas" width = "500" height = "1000" style="border:1px solid #d3d3d3;"></canvas>
+<canvas id="myCanvas"></canvas>
 </body>
 </html>
