--- a/DontSee.html
+++ b/DontSee.html
@@ -14,6 +14,6 @@
 <body onload="main()">
 <p id = "nani"></p>
 <canvas id="myCanvas"></canvas>
-<img src = "Black-dot-1.png" id = "1" width = "400" height="300">
+<img src = "Black-dot-1.png" id = "1" >
 </body>
 </html>
