--- a/DontSee.html
+++ b/DontSee.html
@@ -14,6 +14,6 @@
 <body onload="main()">
 <p id = "nani"></p>
 <canvas id="myCanvas"></canvas>
-<img src = "Black-dot-1.png" id = "1" >
+<img src = "Black-dot-1.png" id = "1" style="position:absolute;left:100px;top:150px;" >
 </body>
 </html>
