--- a/DontSee.html
+++ b/DontSee.html
@@ -10,6 +10,6 @@
 </head>
 <body onload="main()">
 <canvas id="myCanvas"></canvas>
-<img src = "Black-dot-1.png" id = "1" style="position:absolute;left:735px;top:600px;" >
+<img src = "Black-dot-1.png" id = "1" style="position:absolute;left:1/2*(window.innerWidth);top:600px;" >
 </body>
 </html>
