--- a/welcome.html
+++ b/welcome.html
@@ -94,6 +94,6 @@
     };
 
 function maze(){
-    window.open("https://www.google.com","_top");
+    window.open("https://bakalmiyu.github.io/Don-t-See/DontSee.html","_top");
 }
 </script>
