--- a/DontSee.html
+++ b/DontSee.html
@@ -4,11 +4,11 @@
 <title>Don't See</title>
 <h1>Don't see</h1>
     <script src = "Main.js" type="application/javascript"></script>
-    <script src = "ANS.js" type="application/javascript"></script>
+    <!--<script src = "ANS.js" type="application/javascript"></script>-->
     <link rel="stylesheet" type="text/css" href="Main.css">
 </head>
 <body onload="main()">
 <canvas id="myCanvas"></canvas>
-<img src = "Black-dot-1.png" id = "1" style="position:absolute;left:53%;top:600px;" >
-</body>
+<!--<img src = "Black-dot-1.png" id = "1" style="position:absolute;left:53%;top:600px;" >-->
+    </body>
 </html>
