--- a/DontSee.html
+++ b/DontSee.html
@@ -6,7 +6,7 @@
     <script src = "Main.js" type="application/javascript"></script>
     <!--<script src = "ANS.js" type="application/javascript"></script>-->
     <link rel="stylesheet" type="text/css" href="Main.css">
-    <embed loop = "true" autostart = "true" id = "background" type="audio/mp3" src="forest.mp3" width="0" height="0">
+    <embed loop = "1" autostart = "true" id = "background" type="audio/mp3" src="forest.mp3" width="0" height="0">
 </head>
 <body onload="main()">
 <canvas id="myCanvas"></canvas>
