--- a/DontSee.html
+++ b/DontSee.html
@@ -4,7 +4,7 @@
 <title>Don't See</title>
 <h1>Don't see</h1>
     <script src = "Main.js" type="application/javascript"></script>
-    <!--<script src = "ANS.js" type="application/javascript"></script>-->
+    <script src = "ANS.js" type="application/javascript"></script>
     <link rel="stylesheet" type="text/css" href="Main.css">
 </head>
 <body onload="main()">
