--- a/welcome.html
+++ b/welcome.html
@@ -5,8 +5,8 @@
 
 <body>
     <script>
-        var welcome = new Audio('welcome.mp3')
-        welcome.play()
+        var welcome = new Audio('welcome.mp3');
+        welcome.play();
     </script>
     <div class="form">
         <label for="usr">Name:</label>
