--- a/welcome.html
+++ b/welcome.html
@@ -4,10 +4,8 @@
 </head>
 
 <body>
-    <script>
-        var welcome = new Audio('welcome.mp3');
-        welcome.play();
-    </script>
+    <div id="music"><embed src="welcome.mp3" autostart=true loop=false></div>
+
     <div class="form">
         <label for="usr">Name:</label>
         <input type="text" class="form-control" id="textbox" autofocus>
