--- a/DontSee.html
+++ b/DontSee.html
@@ -19,6 +19,6 @@
 		}
 	</script>
 	<button id = 'display' onclick = 'showup()'>click me!</button>
-<canvas id="myCanvas"></canvas>
+<canvas id="myCanvas" style = "display:none"></canvas>
 </body>
 </html>
