--- a/DontSee.html
+++ b/DontSee.html
@@ -18,7 +18,7 @@
 			}
 		}
 	</script>
-	<button id = 'display' onclick = 'showup()'>Show Maze</button>
+	<button id = 'display' onclick = 'showup()'>Don't Click it!</button>
 <canvas id="myCanvas" style = "display:none"></canvas>
 </body>
 </html>
