--- a/Prototype/welcome.html
+++ b/Prototype/welcome.html
@@ -94,6 +94,6 @@
     };
 
 function maze(){
-    window.open("https://bakalmiyu.github.io/Don-t-See/DontSee.html","_top");
+    window.open("https://bakalmiyu.github.io/Don-t-See/Prototype/DontSee.html","_top");
 }
 </script>
